--- a/html/contato.html
+++ b/html/contato.html
@@ -10,20 +10,28 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/styles3.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Contato</h1>
+
+    <!--Menu-->
+  <iframe src="menu.html" frameborder="0" style="width: 100%;"></iframe>
+  <!--Menu-->
+    
+  <h1>Contato</h1>
     <h2>Entre em contato com a gente para receber mais novidades</h2>
     
     <!--Formulário-->
-    <form action="form">
-        <label for="name">Nome completo</label>
-        <input type="text" id="nameComplete">
-        <label for="cellnumber">Telefone</label>
-        <input type="number" id="cellnumber">
-        <label for="gmail">Email</label>
-        <input type="text" id="email">
-        <input type="text" name="resposta" id="resposta" placeholder="Digite algo">
+    <form action="form" id="formulario">
+        <label for="name">Nome completo</label><br>
+        <input type="text" id="nameComplete"><br>
+        <label for="cellnumber">Telefone</label><br>
+        <input type="number" id="cellnumber"><br>
+        <label for="gmail">Email</label><br>
+        <input type="text" id="email"><br>
+        <input type="text" name="resposta" id="resposta" placeholder="Digite algo"><br>
     </form>
     <!--Formulário-->
 
