--- a/html/menu.html
+++ b/html/menu.html
@@ -1,12 +1,15 @@
 <link rel="stylesheet" href="../css/menu.css">
 
-<div id="barra">
-    <div id="menu">
-        <ul>
-        <li><a href="../html/index.html">Inicio</a></li>
-        <li><a href="../html/pagina1.html">Pagina1</a></li>
-        <li><a href="../html/pagina2.html">Pagina2</a></li>
-        <li><a href="#">Pagina3</a></li>
-        </ul>
-    </div>
-</div>
+<div class="Logo"></div>
+<header>
+    <nav class="nav-bar">
+        <div class="nav-list">
+            <ul>
+                <li class="nav-item"><a href="../html/index.html" class="nav-link">Inicio</a></li>
+                <li class="nav-item"><a href="../html/qmsomos.html" class="nav-link">Quem somos</a></li>
+                <li class="nav-item"><a href="../html/gamificacao.html" class="nav-link">Gamificação</a></li>
+                <li class="nav-item"><a href="../html/Contato.html" class="nav-link">Contato</a></li>
+            </ul>
+        </div>
+    </nav>
+</header>
