modificação para menu

--- a/contato.html
+++ b/contato.html
@@ -17,8 +17,20 @@
 <body>
 
     <!--Menu-->
-  <iframe src="menu.html" frameborder="0" style="width: 100%;"></iframe>
-  <!--Menu-->
+  <div class="Logo"></div>
+  <header>
+      <nav class="nav-bar">
+          <div class="nav-list">
+              <ul>
+                  <li class="nav-item"><a href="./index.html" class="nav-link">Inicio</a></li>
+                  <li class="nav-item"><a href="./qmsomos.html" class="nav-link">Quem somos</a></li>
+                  <li class="nav-item"><a href="./gamificacao.html" class="nav-link">Gamificação</a></li>
+                  <li class="nav-item"><a href="./contato.html" class="nav-link">Contato</a></li>
+              </ul>
+          </div>
+      </nav>
+  </header>
+    <!--Menu-->
     
   <h1>Contato</h1>
     <h2>Entre em contato com a gente para receber mais novidades</h2>
