--- a/gamificacao.html
+++ b/gamificacao.html
@@ -15,7 +15,19 @@
 <div id="container-principal">
 
   <!--Menu-->
-  <iframe src="menu.html" frameborder="0" style="width: 100%;"></iframe>
+    <div class="Logo"></div>
+    <header>
+        <nav class="nav-bar">
+            <div class="nav-list">
+                <ul>
+                    <li class="nav-item"><a href="./index.html" class="nav-link">Inicio</a></li>
+                    <li class="nav-item"><a href="./qmsomos.html" class="nav-link">Quem somos</a></li>
+                    <li class="nav-item"><a href="./gamificacao.html" class="nav-link">Gamificação</a></li>
+                    <li class="nav-item"><a href="./contato.html" class="nav-link">Contato</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
   <!--Menu-->
 
   <!--Título Gamificação Banho-->
