--- a/qmsomos.html
+++ b/qmsomos.html
@@ -4,22 +4,50 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/qmsomos.css">
 </head>
 <body>
+    <div id="container-principal">
     <!--Menu-->
-  <div class="Logo"></div>
-  <header>
-      <nav class="nav-bar">
-          <div class="nav-list">
-              <ul>
-                  <li class="nav-item"><a href="./index.html" class="nav-link">Inicio</a></li>
-                  <li class="nav-item"><a href="./qmsomos.html" class="nav-link">Quem somos</a></li>
-                  <li class="nav-item"><a href="./gamificacao.html" class="nav-link">Gamificação</a></li>
-                  <li class="nav-item"><a href="./contato.html" class="nav-link">Contato</a></li>
-              </ul>
-          </div>
-      </nav>
-  </header>
+        <div class="Logo"></div>
+            <header>
+                <nav class="nav-bar">
+                    <div class="nav-list">
+                        <ul>
+                            <li class="nav-item"><a href="./index.html" class="nav-link">Inicio</a></li>
+                            <li class="nav-item"><a href="./qmsomos.html" class="nav-link">Quem somos</a></li>
+                            <li class="nav-item"><a href="./gamificacao.html" class="nav-link">Gamificação</a></li>
+                            <li class="nav-item"><a href="./contato.html" class="nav-link">Contato</a></li>
+                        </ul>
+                    </div>
+                </nav>
+            </header>
     <!--Menu-->
+    
+    <!--Paragrafo-->
+        <p class="paragrafo">
+            Bem-vindo à Eletric Schneider, uma empresa inovadora e líder no setor de soluções elétricas. Fundada em [ano de fundação], temos orgulho de oferecer aos nossos clientes produtos e serviços de alta qualidade, impulsionados pela paixão por excelência e tecnologia.<br>
+
+Nossa história começou com uma visão audaciosa de revolucionar a indústria elétrica, tornando-a mais eficiente, sustentável e confiável. Ao longo dos anos, investimos em pesquisa e desenvolvimento, estabelecendo parcerias estratégicas e atraindo os melhores talentos do setor. Essa dedicação nos permitiu crescer e expandir nossas operações, atendendo a clientes em todo o mundo.<br>
+
+Nossa equipe é composta por profissionais altamente capacitados, engenheiros especializados e especialistas em tecnologia, todos empenhados em enfrentar os desafios mais complexos do mundo da eletricidade. Acreditamos que a chave para o sucesso está em nossa abordagem colaborativa, trabalhando em conjunto com nossos clientes para entender suas necessidades únicas e fornecer soluções personalizadas que impulsionem o crescimento de seus negócios.
+
+Comprometidos com a sustentabilidade e a responsabilidade ambiental, nossos produtos são desenvolvidos com foco na eficiência energética e na redução do impacto ambiental.<br>Temos um compromisso firme com a inovação, constantemente buscando novas maneiras de aprimorar nossas soluções e oferecer tecnologias de ponta que impulsionem o futuro da eletrificação.
+
+Nossos serviços abrangem desde o projeto e instalação de sistemas elétricos industriais e comerciais até a manutenção preventiva e corretiva, garantindo que nossos clientes tenham operações contínuas e confiáveis. Além disso, oferecemos treinamentos e workshops para nossos clientes, capacitando-os a utilizar nossas soluções com eficiência e segurança.
+
+<br>Como uma empresa socialmente responsável, também estamos comprometidos com o desenvolvimento das comunidades em que operamos. Através de iniciativas de responsabilidade social corporativa, apoiamos projetos que promovem a educação, a saúde e o bem-estar das pessoas ao nosso redor.
+
+<br>Na Eletric Schneider, acreditamos que o futuro é elétrico e estamos determinados a moldar esse futuro de maneira positiva. Nossos valores fundamentais de inovação, qualidade, integridade e compromisso com o cliente nos impulsionam a sermos os melhores em nossa área.
+
+Obrigado por fazer parte da nossa jornada. Juntos, continuaremos a trilhar novos caminhos e a iluminar o mundo com a excelência em soluções elétricas.
+        </p>
+    <!--Paragrafo-->
+    </div>
 </body>
 </html>
