--- a/gamificacao.html
+++ b/gamificacao.html
@@ -36,7 +36,7 @@
   
   <!--Parágrafo e Gamificação Banho-->
   <div class="paragrafo-banho">
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid quas aspernatur eius sint molestias officia fugit ratione harum ipsum sunt saepe commodi, necessitatibus quis aperiam, ipsam distinctio in est delectus!</p>
+  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro aliquid recusandae, modi obcaecati vitae iusto distinctio numquam architecto, ex repellendus quidem necessitatibus? Ea inventore magni at maiores, amet sapiente ratione.</p>
   <div id="banho">Clique Aqui </div>
   </div>
 
