--- a/contato.html
+++ b/contato.html
@@ -34,7 +34,7 @@
     <!--Menu-->
   <div id="formulario">  
   <h1>Contato</h1>
-    <h2>Entre em contato com a gente para receber mais novidades</h2>
+    <h2>Entre em contato com a gente para receber mais novidades:</h2>
     
     <!--Formulário-->
     <form action="form" id="formulario">
@@ -49,7 +49,7 @@
     <!--Formulário-->
 
     <!--Redes sociais-->
-    <p>Entre tambem nas nossas redes sociais, para participar de debates</p>
+    <p>Entre tambem nas nossas redes sociais, para participar de debates!!</p>
     <!--Redes sociais-->
     </div>
 </div>
