--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="nav-list">
             <ul>
                 <li class="nav-item"><a href="./index.html" class="nav-link">Inicio</a></li>
-                <li class="nav-item"><a href="./qmsomos.html" class="nav-link">Quem somos</a></li>
+                <li class="nav-item"><a href="./qmsomos.html" class="nav-link">Quem nós somos</a></li>
                 <li class="nav-item"><a href="./gamificacao.html" class="nav-link">Gamificação</a></li>
                 <li class="nav-item"><a href="./contato.html" class="nav-link">Contato</a></li>
             </ul>
