--- a/html/contato.html
+++ b/html/contato.html
@@ -9,13 +9,17 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/contato.css">
+    <link rel="stylesheet" href="../css/contato.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
 </head>
 <body>
 <div id="container-principal">
+
+    <!--Título Principal-->
+  <h1>SCHNEIDER ELETRIC BRASIL</h1>
+  <!--Título Principal-->
     
     <!--Menu-->
   <div class="Logo"></div>
@@ -24,9 +28,10 @@
           <div class="nav-list">
               <ul>
                   <li class="nav-item"><a href="./index.html" class="nav-link">Inicio</a></li>
-                  <li class="nav-item"><a href="./qmsomos.html" class="nav-link">Quem somos</a></li>
+                  <li class="nav-item"><a href="./quemsomos.html" class="nav-link">Quem somos</a></li>
                   <li class="nav-item"><a href="./gamificacao.html" class="nav-link">Gamificação</a></li>
                   <li class="nav-item"><a href="./contato.html" class="nav-link">Contato</a></li>
+                  <li class="nav-item"><a href="./equipe.html" class="nav-link">Sobre o projeto</a></li>
               </ul>
           </div>
       </nav>
