--- a/html/gamificacao.html
+++ b/html/gamificacao.html
@@ -14,6 +14,10 @@
 <body>
 <div id="container-principal">
 
+   <!--Título Principal-->
+   <h1>SCHNEIDER ELETRIC BRASIL</h1>
+   <!--Título Principal-->
+
   <!--Menu-->
     <div class="Logo"></div>
     <header>
@@ -21,9 +25,10 @@
             <div class="nav-list">
                 <ul>
                     <li class="nav-item"><a href="./index.html" class="nav-link">Inicio</a></li>
-                    <li class="nav-item"><a href="./qmsomos.html" class="nav-link">Quem somos</a></li>
+                    <li class="nav-item"><a href="./quemsomos.html" class="nav-link">Quem somos</a></li>
                     <li class="nav-item"><a href="./gamificacao.html" class="nav-link">Gamificação</a></li>
                     <li class="nav-item"><a href="./contato.html" class="nav-link">Contato</a></li>
+                    <li class="nav-item"><a href="./equipe.html" class="nav-link">Sobre o projeto</a></li>
                 </ul>
             </div>
         </nav>
