--- a/html/gamificacao.html
+++ b/html/gamificacao.html
@@ -34,21 +34,16 @@
         </nav>
     </header>
   <!--Menu-->
-
-  <!--Título Gamificação Banho-->
-  <h3>Banho</h3>
-  <!--Título Gamificação Banho-->
   
   <!--Parágrafo e Gamificação Banho-->
   <div class="paragrafo-banho">
-  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro aliquid recusandae, modi obcaecati vitae iusto distinctio numquam architecto, ex repellendus quidem necessitatibus? Ea inventore magni at maiores, amet sapiente ratione.</p>
+    <h3 style="font-size: 55px;color:blue;font-weight: 600;">H2O</h3>
+  <p>O ato diário de tomar um banho é um luxo moderno que muitas vezes não consideramos de forma completa.</p>
+  <p>Enquanto a água escorre pelo chuveiro, poucos de nós param para refletir sobre o impacto ambiental desse gesto aparentemente inofensivo.</p>
+  <p>Tomar banho é uma atividade que, em média, consome uma quantidade significativa de água. Um chuveiro padrão libera cerca de 9 a 10 litros de água por minuto. Se considerarmos um banho médio de 10 a 15 minutos, estamos falando de 90 a 150 litros de água sendo utilizados em um único banho. Esses números podem variar com base na pressão da água, no tipo de chuveiro e nos hábitos individuais.</p>
   <div id="banho">Clique Aqui </div>
-  </div>
 
-  
-  <!--Parágrafo e Gamificação Banho-->
-
-  <!--Tabela Banho-->
+<div style="border:2px solid black; margin-top: 10px;">
   <div class="container text-center mt-5" style="border-radius:5px 5px 0 0 ;">
     <div class="row align-items-start">
       <div class="col">
@@ -88,13 +83,32 @@
       </div>
     </div>
   </div>
-  <!--Tabela Banho-->
+  </div>
+
+<h5 style="font-size: 30px;color: gold;font-weight: 600;margin-top: 120px;margin-bottom: 50px;">Pequenas Mudanças, Grandes Resultados:</h5>
+<p style="margin-top: 30px;">No ritmo frenético de nossas vidas modernas, é fácil deixar passar despercebido o impacto ambiental das atividades mais simples. Tomar um banho, por exemplo, é um ato de relaxamento que muitas vezes não associamos a questões ambientais. No entanto, a conscientização sobre o consumo de água no chuveiro pode resultar em mudanças positivas surpreendentes.</p>
+<div class="lado-img">
+<p>Uma abordagem consciente em relação ao tempo gasto no chuveiro pode ter um impacto considerável. Reduzir o tempo de banho, mesmo que seja apenas de alguns minutos, pode acumular economias significativas de água ao longo do tempo. Isso não apenas preserva um recurso essencial, mas também ajuda a diminuir a pegada hídrica de nossas atividades diárias.</p>
+<p>Além disso, a escolha de instalações mais eficientes pode ter um efeito notável. A instalação de redutores de vazão ou chuveiros de baixo fluxo é uma maneira simples e prática de economizar água, sem sacrificar a qualidade do banho. Esses pequenos ajustes demonstram como a inovação pode desempenhar um papel fundamental na promoção de práticas mais sustentáveis.</p>
+<img src="../img/foto de chuveiro.webp" alt="chuveiro saindo agua" class="foto-chuveiro">
+<p>Uma sugestão criativa para economizar água é coletar a água fria que sai inicialmente do chuveiro enquanto espera que ela esquente. Essa água aparentemente desperdiçada pode ser reaproveitada para tarefas domésticas, como regar plantas ou limpar superfícies. Essa prática simples exemplifica como pequenos atos podem ter um impacto mais amplo.</p>
+<p>Em última análise, cada ação consciente conta. As mudanças que fazemos em nossos hábitos diários, como tomar banhos mais curtos, usar instalações eficientes e ajustar a temperatura da água, contribuem para um futuro mais sustentável. Ao adotar essas práticas, não apenas estamos preservando recursos valiosos, mas também estamos cultivando uma mentalidade de respeito pela natureza. O caminho para um planeta mais saudável começa em nossas próprias casas, um chuveiro de cada vez.</p></div>
+</div>
+
+<!--Parágrafo e Gamificação Banho-->
 
   
   <!--Titulo Luz-->
-  <h3 style="color: darkslategray;">Luz</h3>
+<div class="paragrafo-luz">
+  <h3 style="font-size: 55px;color:rgb(46, 44, 44);font-weight: 600;">Luz</h3>
   <!--Titulo Luz-->
 
+  <p>A luz é uma parte indispensável da nossa vida cotidiana, mas muitas vezes não percebemos o quanto seu uso impacta nosso consumo de energia e o meio ambiente. Neste texto, exploraremos o gasto de luz em nossas casas, destacando como pequenas escolhas conscientes podem fazer uma grande diferença na redução do consumo energético e na preservação dos recursos naturais.</p>
+  <p style="margin-top: 0; margin-bottom: 0;">Quando acendemos uma lâmpada em nossa casa, raramente consideramos a jornada da energia elétrica que torna isso possível. A eletricidade é gerada em usinas, muitas das quais dependem de fontes não renováveis, como carvão, petróleo e gás natural. O processo de geração, transmissão e distribuição dessa energia consome recursos naturais e emite gases de efeito estufa, contribuindo para as mudanças climáticas.</p>
+  <p>Pequenas mudanças em nossos comportamentos diários podem ter um efeito positivo. Optar por aparelhos e eletrônicos eficientes em termos de energia, desligar dispositivos quando não estão em uso e usar iluminação apenas quando necessário são maneiras de reduzir nosso consumo de energia. Além disso, o uso de energias renováveis, como a solar e eólica, pode contribuir para a mitigação dos impactos ambientais.</p>
+  <p>Ao adotar práticas mais conscientes em relação ao consumo de energia elétrica, estamos contribuindo para a preservação do meio ambiente e para a sustentabilidade do nosso planeta. Cada ação individual conta, e juntos podemos criar um impacto significativo para um futuro mais limpo e saudável.</p>
+  <img src="../img/luz.jpg" alt="varias lampadas, somente uma acesa no meio" class="foto-luz">
+</div>
   <!--Gamificação Luz-->
   <div id="container-luz">
     <label for="valor">Digite o valor de gasto mensal de luz:</label>
@@ -106,7 +120,7 @@
   <!--Gamificação Luz-->
 
   <!--Titulo Economia pro seu bolso-->
-  <h3 style="color: gold;">Economizando seu bolso</h3>
+  <h3 style="font-size: 55px;color: gold;font-weight: 600;">Economizando seu bolso</h3>
   <!--Titulo Economia pro seu bolso-->
 
 
