--- a/html/equipe.html
+++ b/html/equipe.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="../css/equipe.css">
 </head>
 <body>
-
+<div id="container-principal">
 <!--Título Principal-->
   <h1>SCHNEIDER ELETRIC BRASIL</h1>
   <!--Título Principal-->
@@ -36,5 +36,41 @@
       </nav>
   </header>
     <!--Menu-->
+    <div class="row row-cols-1 row-cols-md-2 g-4" style="margin:15px;">
+        <div class="col">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Eddy Takashi</h5>
+              <p class="card-text">Back-end, front-end e criação dos slides.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Mauricio V. Correa</h5>
+              <p class="card-text">Apresentação do video.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Lucas Maciel</h5>
+              <p class="card-text"></p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Erick Gruber</h5>
+              <p class="card-text"></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    <p>Entre também nas nossas redes sociais</p>
+    </div>
 </body>
 </html>
