--- a/html/gamificacao.html
+++ b/html/gamificacao.html
@@ -37,7 +37,7 @@
   
   <!--Parágrafo e Gamificação Banho-->
   <div class="paragrafo-banho">
-    <h3 style="font-size: 55px;color:blue;font-weight: 600;">H2O</h3>
+    <h3 style="font-size: 55px;color:blue;font-weight: 900;">H2O</h3>
   <p>O ato diário de tomar um banho é um luxo moderno que muitas vezes não consideramos de forma completa.</p>
   <p>Enquanto a água escorre pelo chuveiro, poucos de nós param para refletir sobre o impacto ambiental desse gesto aparentemente inofensivo.</p>
   <p>Tomar banho é uma atividade que, em média, consome uma quantidade significativa de água. Um chuveiro padrão libera cerca de 9 a 10 litros de água por minuto. Se considerarmos um banho médio de 10 a 15 minutos, estamos falando de 90 a 150 litros de água sendo utilizados em um único banho. Esses números podem variar com base na pressão da água, no tipo de chuveiro e nos hábitos individuais.</p>
@@ -100,7 +100,7 @@
   
   <!--Titulo Luz-->
 <div class="paragrafo-luz">
-  <h3 style="font-size: 55px;color:rgb(46, 44, 44);font-weight: 600;">Luz</h3>
+  <h3 style="font-size: 55px;color:rgb(46, 44, 44);font-weight: 900;">Luz</h3>
   <!--Titulo Luz-->
 
   <p>A luz é uma parte indispensável da nossa vida cotidiana, mas muitas vezes não percebemos o quanto seu uso impacta nosso consumo de energia e o meio ambiente. Neste texto, exploraremos o gasto de luz em nossas casas, destacando como pequenas escolhas conscientes podem fazer uma grande diferença na redução do consumo energético e na preservação dos recursos naturais.</p>
@@ -119,14 +119,16 @@
   <br><br>
   <!--Gamificação Luz-->
 
-  <!--Titulo Economia pro seu bolso-->
-  <h3 style="font-size: 55px;color: gold;font-weight: 600;">Economizando seu bolso</h3>
-  <!--Titulo Economia pro seu bolso-->
+
 
 
   <!--Gamificação Economia para o seu bolso conta de Luz-->
   <div id="paragrafo-economia">
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae nostrum vitae ex. Aliquid, ad earum natus similique facilis tempore beatae laudantium, doloremque alias dicta necessitatibus quaerat, ea unde ipsum ut?</p>
+      <!--Titulo Economia pro seu bolso-->
+  <h3 style="font-size: 55px;color: gold;font-weight: 900;">Economizando seu bolso</h3>
+  <!--Titulo Economia pro seu bolso-->
+    <p>Buscar maneiras de economizar no orçamento doméstico é uma atitude inteligente e responsável, e uma das áreas onde podemos fazer isso é reduzindo os gastos com água e energia elétrica.</p>
+    <p>Além de aliviar a pressão financeira, essa abordagem também contribui para um estilo de vida mais sustentável, ajudando a preservar nossos recursos naturais e reduzir a pegada de carbono.</p>
     
     <label for="custo" style="font-size: 20px; font-weight: 600;">Digite o gasto mensal de sua conta de água e luz:</label>
     <input type="number" id="custo" placeholder="Digite aqui" style="margin-left: 13px;"><br>
