--- a/html/quemsomos.html
+++ b/html/quemsomos.html
@@ -35,23 +35,26 @@
     <!--Menu-->
     
     <!--Paragrafo-->
-        <p class="paragrafo">
-            Bem-vindo à Eletric Schneider, uma empresa inovadora e líder no setor de soluções elétricas. Fundada em [ano de fundação], temos orgulho de oferecer aos nossos clientes produtos e serviços de alta qualidade, impulsionados pela paixão por excelência e tecnologia.<br>
+        <div class="paragrafo">
+            <p>Bem-vindo à Eletric Schneider, uma empresa inovadora e líder no setor de soluções elétricas. Fundada em 1836, temos orgulho de oferecer aos nossos clientes produtos e serviços de alta qualidade, impulsionados pela paixão por excelência e tecnologia.</p>
 
-Nossa história começou com uma visão audaciosa de revolucionar a indústria elétrica, tornando-a mais eficiente, sustentável e confiável. Ao longo dos anos, investimos em pesquisa e desenvolvimento, estabelecendo parcerias estratégicas e atraindo os melhores talentos do setor. Essa dedicação nos permitiu crescer e expandir nossas operações, atendendo a clientes em todo o mundo.<br>
+<p>Nossa história começou com uma visão audaciosa de revolucionar a indústria elétrica, tornando-a mais eficiente, sustentável e confiável.</p>
 
-Nossa equipe é composta por profissionais altamente capacitados, engenheiros especializados e especialistas em tecnologia, todos empenhados em enfrentar os desafios mais complexos do mundo da eletricidade. Acreditamos que a chave para o sucesso está em nossa abordagem colaborativa, trabalhando em conjunto com nossos clientes para entender suas necessidades únicas e fornecer soluções personalizadas que impulsionem o crescimento de seus negócios.
+<p>Ao longo dos anos, investimos em pesquisa e desenvolvimento, estabelecendo parcerias estratégicas e atraindo os melhores talentos do setor. Essa dedicação nos permitiu crescer e expandir nossas operações, atendendo a clientes em todo o mundo.</p>
 
-Comprometidos com a sustentabilidade e a responsabilidade ambiental, nossos produtos são desenvolvidos com foco na eficiência energética e na redução do impacto ambiental.<br>Temos um compromisso firme com a inovação, constantemente buscando novas maneiras de aprimorar nossas soluções e oferecer tecnologias de ponta que impulsionem o futuro da eletrificação.
+<p>Nossa equipe é composta por profissionais altamente capacitados, engenheiros especializados e especialistas em tecnologia, todos empenhados em enfrentar os desafios mais complexos do mundo da eletricidade. Acreditamos que a chave para o sucesso está em nossa abordagem colaborativa, trabalhando em conjunto com nossos clientes para entender suas necessidades únicas e fornecer soluções personalizadas que impulsionem o crescimento de seus negócios.</p>
 
-Nossos serviços abrangem desde o projeto e instalação de sistemas elétricos industriais e comerciais até a manutenção preventiva e corretiva, garantindo que nossos clientes tenham operações contínuas e confiáveis. Além disso, oferecemos treinamentos e workshops para nossos clientes, capacitando-os a utilizar nossas soluções com eficiência e segurança.
+<img src="../img/schneider labour.jpg" alt="">
 
-<br>Como uma empresa socialmente responsável, também estamos comprometidos com o desenvolvimento das comunidades em que operamos. Através de iniciativas de responsabilidade social corporativa, apoiamos projetos que promovem a educação, a saúde e o bem-estar das pessoas ao nosso redor.
+<p>Comprometidos com a sustentabilidade e a responsabilidade ambiental, nossos produtos são desenvolvidos com foco na eficiência energética e na redução do impacto ambiental.Temos um compromisso firme com a inovação, constantemente buscando novas maneiras de aprimorar nossas soluções e oferecer tecnologias de ponta que impulsionem o futuro da eletrificação.</p>
 
-<br>Na Eletric Schneider, acreditamos que o futuro é elétrico e estamos determinados a moldar esse futuro de maneira positiva. Nossos valores fundamentais de inovação, qualidade, integridade e compromisso com o cliente nos impulsionam a sermos os melhores em nossa área.
+<p>Nossos serviços abrangem desde o projeto e instalação de sistemas elétricos industriais e comerciais até a manutenção preventiva e corretiva, garantindo que nossos clientes tenham operações contínuas e confiáveis. Além disso, oferecemos treinamentos e workshops para nossos clientes, capacitando-os a utilizar nossas soluções com eficiência e segurança.</p>
 
-Obrigado por fazer parte da nossa jornada. Juntos, continuaremos a trilhar novos caminhos e a iluminar o mundo com a excelência em soluções elétricas.
-        </p>
+<p>Como uma empresa socialmente responsável, também estamos comprometidos com o desenvolvimento das comunidades em que operamos. Através de iniciativas de responsabilidade social corporativa, apoiamos projetos que promovem a educação, a saúde e o bem-estar das pessoas ao nosso redor.</p>
+
+<p>Na Eletric Schneider, acreditamos que o futuro é elétrico e estamos determinados a moldar esse futuro de maneira positiva. Nossos valores fundamentais de inovação, qualidade, integridade e compromisso com o cliente nos impulsionam a sermos os melhores em nossa área.</p>
+
+<p>Obrigado por fazer parte da nossa jornada. Juntos, continuaremos a trilhar novos caminhos e a iluminar o mundo com a excelência em soluções elétricas.</p>
     <!--Paragrafo-->
     </div>
 </body>
