--- a/html/quemsomos.html
+++ b/html/quemsomos.html
@@ -9,6 +9,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/quemsomos.css">
 </head>
 <body>
@@ -56,6 +59,14 @@
 
 <p>Obrigado por fazer parte da nossa jornada. Juntos, continuaremos a trilhar novos caminhos e a iluminar o mundo com a excelência em soluções elétricas.</p>
     <!--Paragrafo-->
+    
     </div>
+
+<!--Barra Horizontal-->
+<div class="barra-horizontal">
+    <p>Entre em contato também através das nossas redes sociais!
+  </p>
+  </div>
+  <!--Barra Horizontal-->
 </body>
 </html>
