--- a/html/gamificacao.html
+++ b/html/gamificacao.html
@@ -50,7 +50,7 @@
   <div class="container text-center mt-5" style="border-radius:5px 5px 0 0 ;">
     <div class="row align-items-start">
       <div class="col">
-        2 a 5 min
+        5 a 7 min
       </div>
       <div class="col" style="color: blue">
         Você é economico no chuveiro
@@ -63,26 +63,27 @@
   <div class="container text-center">
     <div class="row align-items-center">
       <div class="col">
-        6 a 10 min
+        8 a 15 min
       </div>
       <div class="col" style="color: yellow;">
         Você é moderado no chuveiro
       </div>
       <div class="col" style="color: yellow;">
-        Existem algumas formas para melhorar:
+        
+        Apesar de adotar medidas moderadas no banho, ainda daria para diminuir alguns minutos!
       </div>
     </div>
   </div>
   <div class="container text-center" style="border-radius: 0 0 5px 5px;">
     <div class="row align-items-end">
       <div class="col">
-        10 ou mais minutos
+        15 ou mais minutos
       </div>
       <div class="col" style="color: red;">
         Você deperdiça muita água
       </div>
       <div class="col" style="color: red;">
-        Algumas soluções são essas:
+        <p>O uso excessivo de água durante o banho pode levar à escassez de recursos hídricos.</p>
       </div>
     </div>
   </div>
