--- a/html/gamificacao.html
+++ b/html/gamificacao.html
@@ -103,7 +103,7 @@
 
   
   <!--Titulo Luz-->
-< class="paragrafo-luz">
+<div class="paragrafo-luz">
   <h3 style="font-size: 55px;color:rgb(46, 44, 44);font-weight: 900;">Luz</h3>
   <!--Titulo Luz-->
   
