atualização de alinhamento e fonte

--- a/html/contato.html
+++ b/html/contato.html
@@ -18,7 +18,7 @@
 <div id="container-principal">
 
     <!--Título Principal-->
-  <h1>SCHNEIDER ELETRIC BRASIL</h1>
+  <h1 class="animate-charcter">SCHNEIDER ELETRIC BRASIL</h1>
   <!--Título Principal-->
     
     <!--Menu-->
