--- a/html/equipe.html
+++ b/html/equipe.html
@@ -17,7 +17,7 @@
 <body>
 <div id="container-principal">
 <!--Título Principal-->
-  <h1>SCHNEIDER ELETRIC BRASIL</h1>
+  <h1 class="animate-charcter">SCHNEIDER ELETRIC BRASIL</h1>
   <!--Título Principal-->
   
      <!--Menu-->
