--- a/html/equipe.html
+++ b/html/equipe.html
@@ -50,7 +50,7 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Mauricio V. Correa</h5>
-              <p class="card-text">Apresentação do video.</p>
+              <p class="card-text">Apresentação do video e front-end</p>
             </div>
           </div>
         </div>
