--- a/html/gamificacao.html
+++ b/html/gamificacao.html
@@ -98,9 +98,7 @@
   </div>
     <img id="img_galao" src="../img/homem carregando galão de agua.JPG" alt="homem carregando dois galoes de agua - sertão do Nordeste" style="width: 30%;height: 30%;border-radius: 5px;">
   <div class="div1">
-    <p style="margin-top: 50px; margin-left: 10px;">Este deperdício de água impacta as comunidades que não tem acesso a água potável, que muitas vezes precisam sair de suas casas e percorrer longas horas para buscar esta água! 
-      Este deperdício de água impacta as comunidades que não tem acesso a água potável, que muitas vezes precisam sair de suas casas e percorrer longas horas para buscar esta água!
-      Este deperdício de água impacta as comunidades que não tem acesso a água potável, que muitas vezes precisam sair de suas casas e percorrer longas horas para buscar esta água!
+    <p style="margin-top: 50px; margin-left: 10px;">A agricultura é uma das principais usuárias de água no mundo. O desperdício de água agrícola pode levar a perdas de cultivos e impactar a segurança alimentar, já que menos água está disponível para irrigação e produção de alimentos.
     </p>
   </div>
 <h5 style="font-size: 30px;color: gold;font-weight: 600;margin-top: 120px;margin-bottom: 50px;border-bottom: 1px solid black;">Pequenas Mudanças, Grandes Resultados:</h5>
