--- a/html/equipe.html
+++ b/html/equipe.html
@@ -58,7 +58,7 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Lucas Maciel</h5>
-              <p class="card-text"></p>
+              <p class="card-text">Conteúdo textual</p>
             </div>
           </div>
         </div>
@@ -66,7 +66,7 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Erick Gruber</h5>
-              <p class="card-text"></p>
+              <p class="card-text">Conteúdo textual</p>
             </div>
           </div>
         </div>
